--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "garments-machine-parts-manufacturer-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-  "start" : "node index.js",
-  "start-dev" : "nodemon index.js",
+    "start": "node index.js",
+    "start-dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,5 +16,14 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.6.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/programming-hero-web-course1/manufacturer-website-server-side-Mohuya748.git"
+  },
+  "bugs": {
+    "url": "https://github.com/programming-hero-web-course1/manufacturer-website-server-side-Mohuya748/issues"
+  },
+  "homepage": "https://github.com/programming-hero-web-course1/manufacturer-website-server-side-Mohuya748#readme",
+  "description": ""
 }
